# yoke

./: .gitignore  AGENTS.md  CODEBASE_ANALYSIS.md  README.md  pyproject.toml
.githooks/: pre-commit
scripts/: profile_cli_startup.py
src/yoke/: AGENTS.md  __init__.py  __main__.py  _version.py
src/yoke/agent/: __init__.py  budget.py  message_sanitizer.py  models.py  multimodal.py  prompting.py  protocols.py  state.py  truncate.py  usage.py
src/yoke/ai/: __init__.py  sdk.py  sdk_agent.py  sdk_runtime.py  sdk_types.py
src/yoke/cli/: __init__.py  image_input.py  main.py  mcp_app.py  models_app.py  observe_app.py  path_display.py  session.py  session_tree.py  skills_app.py  sys_prompt.md
src/yoke/docs/: cli.md  index.md  sdk.md
src/yoke/mcp/: __init__.py  client.py  config.py  errors.py  manager.py  sse.py  types.py
src/yoke/observe/: __init__.py  context.py  models.py  projection.py  store.py
tests/: conftest.py
tests/yoke/: __init__.py  test_agent_modules.py  test_apply_patch_tool.py  test_attach_image_tool.py  test_codex_image_generation.py  test_context.py  test_edit_tool.py  test_file_length.py  test_mcp.py  test_observe.py  test_provider_openai_compatible.py  test_provider_opencode_go.py  test_provider_usage.py  test_provider_zai.py  test_sdk.py  test_search_registration.py  test_tools.py  test_web_fetch_limits.py  test_web_fetch_output.py  test_web_research_cancellation.py  test_web_search_tool.py  test_web_tools.py
tests/yoke/agent/: test_skill_prompting.py
tests/yoke/ai/: support.py  test_agent_pipeline_example.py  test_sdk_apply_patch.py  (+2 more)
(+240 files in other folders)
