[project]
name = "yoke"
version = "0.12.1"
description = "Native Python coding agent CLI and SDK."
readme = "README.md"
authors = [
    { name = "dakixr", email = "dakixr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pillow>=10",
    "prompt-toolkit>=3.0",
    "pydantic>=2",
    "rich>=13",
    "typer>=0.12",
    "websockets>=15",
]

[project.scripts]
yoke = "yoke.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
